update pengaturan path

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 		<meta name="author" content="Dicki Andrea">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Latihan WebSocket</title>
-		<link href="./style.css" rel="stylesheet" type="text/css">
-		<link href="./bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="./css/style.css" rel="stylesheet" type="text/css">
+		<link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="jumbotron" style="padding: 0px !important;">
@@ -68,8 +68,8 @@
 			</div>
 		</div>
 
-		<script src="./jquery.min.js"></script>
+		<script src="./js/jquery.min.js"></script>
 		<script src="./socket.io/socket.io.js"></script>
-		<script src="./chat.js"></script>
+		<script src="./js/chat.js"></script>
 	</body>
 </html>
